[gd_scene load_steps=27 format=2]

[ext_resource path="res://sprites/witch/w_face.png" type="Texture" id=1]
[ext_resource path="res://sprites/witch/w_body.png" type="Texture" id=2]
[ext_resource path="res://sprites/witch/w_hat_tail.png" type="Texture" id=3]
[ext_resource path="res://sprites/witch/w_hat.png" type="Texture" id=4]
[ext_resource path="res://scenes/witch.gd" type="Script" id=5]
[ext_resource path="res://scenes/claw.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=4]
resource_name = "DualSideAttack"
length = 2.0
tracks/0/type = "animation"
tracks/0/path = NodePath("CompositePlayer/BodyAnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "DualSideAttack", "Idle" ),
"times": PoolRealArray( 0, 1.3 )
}
tracks/1/type = "animation"
tracks/1/path = NodePath("w_body/w_clawL/ClawAnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray( "SideAttack" ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "animation"
tracks/2/path = NodePath("w_body/clawR_pivot/w_clawR/ClawAnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": PoolStringArray( "SideAttack" ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
length = 1.3
loop = true
tracks/0/type = "animation"
tracks/0/path = NodePath("CompositePlayer/BodyAnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "Idle" ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "animation"
tracks/1/path = NodePath("w_body/w_clawL/ClawAnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray( "Idle" ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "animation"
tracks/2/path = NodePath("w_body/clawR_pivot/w_clawR/ClawAnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": PoolStringArray( "Idle" ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=15]
resource_name = "LeftFrontAttack"
length = 1.2
tracks/0/type = "animation"
tracks/0/path = NodePath("CompositePlayer/BodyAnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "DualSideAttack" ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "animation"
tracks/1/path = NodePath("w_body/w_clawL/ClawAnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray( "FrontAttack" ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "animation"
tracks/2/path = NodePath("w_body/clawR_pivot/w_clawR/ClawAnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": PoolStringArray(  ),
"times": PoolRealArray(  )
}

[sub_resource type="Animation" id=19]
resource_name = "RightFrontAttack"
length = 1.2
tracks/0/type = "animation"
tracks/0/path = NodePath("CompositePlayer/BodyAnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "DualSideAttack" ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "animation"
tracks/1/path = NodePath("w_body/w_clawL/ClawAnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray(  ),
"times": PoolRealArray(  )
}
tracks/2/type = "animation"
tracks/2/path = NodePath("w_body/clawR_pivot/w_clawR/ClawAnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": PoolStringArray( "FrontAttack" ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "SETUP"
tracks/0/type = "animation"
tracks/0/path = NodePath("CompositePlayer/BodyAnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "SETUP" ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "animation"
tracks/1/path = NodePath("w_body/w_clawL/ClawAnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray( "SETUP" ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "animation"
tracks/2/path = NodePath("w_body/clawR_pivot/w_clawR/ClawAnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": PoolStringArray( "SETUP" ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
resource_name = "DualSideAttack"
length = 1.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("w_body:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.6, 0.75, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.999985, 8.99999 ), Vector2( 1, 11 ), Vector2( 1, 10.9868 ), Vector2( 1, 5 ), Vector2( 0.999999, 4.99599 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("w_body:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("w_body:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("w_body/w_face:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.35, 0.65, 0.85, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.52323e-05, -6.99999 ), Vector2( -2.64909e-08, -6 ), Vector2( 7.40152e-08, -6.00659 ), Vector2( -4.83665e-08, -8 ), Vector2( 1.14093e-06, -8.02029 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("w_body/w_face:rotation_degrees")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.35, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("w_body/w_face:scale")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("w_body/w_face/w_hat:position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.45, 0.7, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3.52702e-08, -16 ), Vector2( 3.52702e-08, -12 ), Vector2( 3.52702e-08, -12.0263 ), Vector2( 3.52702e-08, -17 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("w_body/w_face/w_hat:rotation_degrees")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.45, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("w_body/w_face/w_hat:scale")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("w_body/w_face/w_hat/w_hat_tail:position")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.45, 0.7, 0.85, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4, -9 ), Vector2( -3.936, -7.5692 ), Vector2( -3.848, -9.12686 ), Vector2( -4.74154, -10.8244 ), Vector2( -4.92637, -10.9239 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("w_body/w_face/w_hat/w_hat_tail:rotation_degrees")
tracks/10/interp = 2
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.45, 0.7, 0.85, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -3.87596, -9.54092, 4.91333, 16.9857 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("w_body/w_face/w_hat/w_hat_tail:scale")
tracks/11/interp = 2
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.45, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 1.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("w_body:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.85 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.999985, 8.99999 ), Vector2( 1, 6 ), Vector2( 0.999985, 8.99999 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("w_body:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.85 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("w_body:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.85 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("w_body/w_face:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -7 ), Vector2( 1.52588e-05, -7.99999 ), Vector2( 0, -7 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("w_body/w_face:rotation_degrees")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("w_body/w_face:scale")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.2, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("w_body/w_face/w_hat:position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.4, 0.7, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.52588e-05, -16 ), Vector2( -1.52588e-05, -17 ), Vector2( 1.52588e-05, -16 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("w_body/w_face/w_hat:rotation_degrees")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.4, 1.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("w_body/w_face/w_hat:scale")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.4, 1.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("w_body/w_face/w_hat/w_hat_tail:position")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.5, 1.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -4, -9 ), Vector2( -4, -9 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("w_body/w_face/w_hat/w_hat_tail:rotation_degrees")
tracks/10/interp = 2
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.5, 0.9, 1.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -4.0, 4.0, -1.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("w_body/w_face/w_hat/w_hat_tail:scale")
tracks/11/interp = 2
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0.5, 1.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "SETUP"
tracks/0/type = "value"
tracks/0/path = NodePath("w_body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.999985, 8.99999 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("w_body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("w_body:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("w_body/w_face:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -7 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("w_body/w_face:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("w_body/w_face:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("w_body/w_face/w_hat:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.52588e-05, -16 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("w_body/w_face/w_hat:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("w_body/w_face/w_hat:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("w_body/w_face/w_hat/w_hat_tail:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, -9 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("w_body/w_face/w_hat/w_hat_tail:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("w_body/w_face/w_hat/w_hat_tail:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "DualSideAttack"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "LeftFrontAttack"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "RightFrontAttack"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]
switch_mode = 2
auto_advance = true
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=14]
states/DualSideAttack/node = SubResource( 10 )
states/DualSideAttack/position = Vector2( 671, 159.8 )
states/Idle/node = SubResource( 11 )
states/Idle/position = Vector2( 989.4, 143.8 )
states/LeftFrontAttack/node = SubResource( 16 )
states/LeftFrontAttack/position = Vector2( 770.2, 51.2 )
states/RightFrontAttack/node = SubResource( 20 )
states/RightFrontAttack/position = Vector2( 1073.8, 15.6 )
transitions = [ "Idle", "DualSideAttack", SubResource( 12 ), "DualSideAttack", "Idle", SubResource( 13 ), "Idle", "LeftFrontAttack", SubResource( 17 ), "LeftFrontAttack", "Idle", SubResource( 18 ), "Idle", "RightFrontAttack", SubResource( 21 ), "RightFrontAttack", "Idle", SubResource( 22 ) ]
start_node = "Idle"
graph_offset = Vector2( -58, -45 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[node name="Witch" type="Node2D"]
script = ExtResource( 5 )

[node name="w_body" type="Sprite" parent="."]
position = Vector2( 0.999998, 6.38969 )
texture = ExtResource( 2 )

[node name="w_face" type="Sprite" parent="w_body"]
position = Vector2( 5.16841e-06, -7.33871 )
texture = ExtResource( 1 )

[node name="w_hat" type="Sprite" parent="w_body/w_face"]
position = Vector2( 1.72254e-05, -15.9355 )
z_index = 1
texture = ExtResource( 4 )

[node name="w_hat_tail" type="Sprite" parent="w_body/w_face/w_hat"]
position = Vector2( -4, -9 )
rotation = -0.0538424
z_index = -1
texture = ExtResource( 3 )
offset = Vector2( -11, -4.00001 )

[node name="w_clawL" parent="w_body" instance=ExtResource( 6 )]
position = Vector2( -43.8936, 1.2307 )
rotation = -0.0504835

[node name="clawR_pivot" type="Position2D" parent="w_body"]
position = Vector2( -0.999999, -6.11903 )
scale = Vector2( -1, 1 )

[node name="w_clawR" parent="w_body/clawR_pivot" instance=ExtResource( 6 )]
position = Vector2( -43.8936, 1.2307 )
rotation = -0.0504835

[node name="CompositePlayer" type="AnimationPlayer" parent="."]
anims/DualSideAttack = SubResource( 4 )
anims/Idle = SubResource( 6 )
anims/LeftFrontAttack = SubResource( 15 )
anims/RightFrontAttack = SubResource( 19 )
anims/SETUP = SubResource( 3 )

[node name="BodyAnimationPlayer" type="AnimationPlayer" parent="CompositePlayer"]
root_node = NodePath("../..")
anims/DualSideAttack = SubResource( 5 )
anims/Idle = SubResource( 2 )
anims/SETUP = SubResource( 1 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 14 )
anim_player = NodePath("../CompositePlayer")
active = true
parameters/playback = SubResource( 9 )

[node name="FireTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="BulletManager" type="Node2D" parent="."]

[node name="LeftSide" type="Node2D" parent="BulletManager"]

[node name="RightSide" type="Node2D" parent="BulletManager"]
rotation = -3.14159
scale = Vector2( 1, -1 )

[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]

[editable path="w_body/w_clawL"]
[editable path="w_body/clawR_pivot/w_clawR"]
